--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,6 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import io\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_frames=64\n",
+    "temp_downsamp_rate = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Range cannot be empty (low >= high) unless no samples are taken",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-f943741939b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mn_frames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m127\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     start_frame = np.random.randint(\n\u001b[0;32m----> 7\u001b[0;31m         0, n_frames - input_frames * temp_downsamp_rate)\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mclip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_frame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_frame\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minput_frames\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtemp_downsamp_rate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp_downsamp_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.randint\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Range cannot be empty (low >= high) unless no samples are taken"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File('./oJCxnjaCoyI_000385_000395.hdf5', 'r') as f:\n",
+    "    video = f['video']\n",
+    "    n_frames = len(video)\n",
+    "    print(n_frames)\n",
+    "    n_frames = 127\n",
+    "    start_frame = np.random.randint(\n",
+    "        0, n_frames - input_frames * temp_downsamp_rate)\n",
+    "    clip = []\n",
+    "    for i in range(start_frame, start_frame + input_frames * temp_downsamp_rate, temp_downsamp_rate):\n",
+    "        img = Image.open(io.BytesIO(video[i]))\n",
+    "\n",
+    "        clip.append(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(10000000):\n",
+    "    start_frame = np.random.randint(\n",
+    "        0, n_frames - input_frames * temp_downsamp_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_frames - input_frames * temp_downsamp_rate <= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
